--- a/KafkaConsumerCamel/src/main/resources/application.properties
+++ b/KafkaConsumerCamel/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.profiles.active=@activatedProperties@
+server.port = 8083
+
+logging.level.org.springframework=INFO
+#logging.level.root=INFO
+
+
+##TIME FORMAT
+time.format = yyyy-MM-dd'T'HH:mm:ss.SSS
+
+
+
+# CONSUMER KAFKA
+kafka.brokers = 192.168.22.161:9092,192.168.22.162:9092,192.168.22.163:9092,192.168.22.164:9092,192.168.22.165:9092,192.168.22.166:9092
+consumer.topic=dataTopic
+consumer.group=radarmeteo-consumer-group
+consumer.consumersCount=1
