--- a/KafkaConsumerCamel/src/main/resources/application.properties
+++ b/KafkaConsumerCamel/src/main/resources/application.properties
@@ -10,7 +10,7 @@ time.format = yyyy-MM-dd'T'HH:mm:ss.SSS
 
 
 # CONSUMER KAFKA
-kafka.brokers = 192.168.22.161:9092,192.168.22.162:9092,192.168.22.163:9092,192.168.22.164:9092,192.168.22.165:9092,192.168.22.166:9092
+kafka.brokers =
 consumer.topic=dataTopic
 consumer.group=radarmeteo-consumer-group
 consumer.consumersCount=1
