--- a/KafkaSpringBootConsumer/src/resources/application.properties
+++ b/KafkaSpringBootConsumer/src/resources/application.properties
@@ -1,7 +1,8 @@
-server.port = 8083
+server.port = 8082
 
 logging.level.org.springframework=INFO
 logging.level.root=INFO
+
 
 ##TIME FORMAT
 time.format = yyyy-MM-dd'T'HH:mm:ss.SSS
@@ -14,4 +15,5 @@ kafka.consumer.consumer-group=consumer-group-1
 kafka.consumer.polling.timeout.in.millis=100
 kafka.restart.delay=3000
 
-polling.timeout = 100
+
+rest.timeout.millis=3000
